--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      </ol>
      <h2>说了这么多废话（不是）了，不来点图怎么能让大家认识我呢？</h2>
      <h3>前方高能预警，非战斗成员请撤离（笑</h3>
-     <img scr="C:/Users/Desktop/大学的记忆/LIU.jpg"/>
+     <img scr="C:\Users\Desktop\大学的记忆\LIU.jpg"/>
      <p>在开学前准备和开学后这一个多月的时间里，也有用拍照的形式留下一些迷人的景致</p>
      <img scr="C:/Users/Desktop/大学的记忆/故宫1.jpg"/>
      <img scr="C:/Users/Desktop/那年今日/1.jpg"/>  
