--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
      <h3>前方高能预警，非战斗成员请撤离（笑</h3>
      <img scr="LIU.jpg"/>
      <p>在开学前准备和开学后这一个多月的时间里，也有用拍照的形式留下一些迷人的景致</p>
-     <img scr="PC/C:/Users/Desktop/大学的记忆/故宫1.jpg"/>
-     <img scr="C:/Users/Desktop/那年今日/1.jpg"/>  
-     <img scr="C:/Users/Desktop/那年今日/2.jpg"/>
-     <img scr="C:/Users/Desktop/那年今日/3.jpg"/>
+     <img scr="001.jpg"/>
+     <img scr="1.jpg"/>  
+     <img scr="2.jpg"/>
+     <img scr="3.jpg"/>
      <p>以及证明我老二次元身份（求同好！！）</p>
-     <img scr="C:/Users/Desktop/那年今日/01.jpg"/> 
+     <img scr="01.jpg"/> 
      <p>既然是大学做的个人空间，当然少不了这件开学以来让我印象最深的事儿：北大的猫都喜欢进书店的吗？！！！
         有图为证！！</p>
-     <img scr="C:/Users/Desktop/那年今日/02.jpg"/>  
-     <img scr="C:/Users/Desktop/那年今日/03.jpg"/>  
+     <img scr="02.jpg"/>  
+     <img scr="03.jpg"/>  
   </body>  
     
