--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
      <img scr="2.jpg"/>
      <img scr="3.jpg"/>
      <p>以及证明我老二次元身份（求同好！！）</p>
-     <img scr="01.jpg"/> 
+     <img scr="01.jpg"> 
      <p>既然是大学做的个人空间，当然少不了这件开学以来让我印象最深的事儿：北大的猫都喜欢进书店的吗？！！！
         有图为证！！</p>
-     <img scr="02.jpg"/>  
-     <img scr="03.jpg"/>  
+     <img scr="02.jpg">  
+     <img scr="03.jpg">  
   </body>  
     
