--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     </ol>
      <h2>说了这么多废话（不是）了，不来点图怎么能让大家认识我呢？</h2>
      <h3>前方高能预警，非战斗成员请撤离（笑</h3>
-     <img scr="LIU.jpg"/>
+     <img src="LIU.jpg"/>
      <p>在开学前准备和开学后这一个多月的时间里，也有用拍照的形式留下一些迷人的景致</p>
-     <img scr="001.jpg"/>
-     <img scr="1.jpg"/>  
-     <img scr="2.jpg"/>
+     <img src="001.jpg"/>
+     <img src="1.jpg"/>  
+     <img src="2.jpg"/>
      <p>以及证明我老二次元身份（求同好！！）</p>
-     <img scr="01.jpg"> 
+     <img src="01.jpg"> 
      <p>既然是大学做的个人空间，当然少不了这件开学以来让我印象最深的事儿：北大的猫都喜欢进书店的吗？！！！
         有图为证！！</p>
-     <img scr="02.jpg">  
-     <img scr="03.jpg"> 
+     <img src="02.jpg">  
+     <img src="03.jpg"> 
      <p>好了，就先说到这里了，希望能与大家成为好朋友（笑）</p>
   </body>  
     
