--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<h2>说了这么多废话（不是）了，不来点图怎么能让大家认识我呢？</h2>
                                                                 <h3>前方高能预警，非战斗成员请撤离（笑</h3>
-                                                                <img src="LIU.jpg">
+                                                                <img src="LIU.jpg"alt="">
                                                                 <p>在开学前准备和开学后这一个多月的时间里，也有用拍照的形式留下一些迷人的景致</p>
                                                                 <img src="https://github.com/RememberLXY/002.github.io/blob/gh-pages/001.jpg">
                                                                 <img src="1.jpg">  
