--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">介绍</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<h2>亿点点自我介绍</h2>
                                                                 <ol>
                                                                 <li>姓名：刘星宇</li>
@@ -58,7 +57,6 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">爱好</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<ol>
 								<li>刷视频（包括但不限于bilibili)</li>
 								<li>追番（包括日漫国漫美漫）</li>
@@ -71,10 +69,9 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">照片</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<h2>说了这么多废话（不是）了，不来点图怎么能让大家认识我呢？</h2>
                                                                 <h3>前方高能预警，非战斗成员请撤离（笑</h3>
-                                                                <img src="LIU.jpg"alt="">
+                                                                <img src="LIU.jpg"width="500">
                                                                 <p>在开学前准备和开学后这一个多月的时间里，也有用拍照的形式留下一些迷人的景致</p>
                                                                 <img src="https://github.com/RememberLXY/002.github.io/blob/gh-pages/001.jpg">
                                                                 <img src="1.jpg">  
