--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                                                 <h3>前方高能预警，非战斗成员请撤离（笑</h3>
                                                                 <img src="LIU.jpg"width="540"height="720">
                                                                 <p>在开学前准备和开学后这一个多月的时间里，也有用拍照的形式留下一些迷人的景致</p>
-                                                                <img src="https://github.com/RememberLXY/002.github.io/blob/gh-pages/001.jpg"width="512"height="384">
+                                                                <img src="001.jpg"width="512"height="384">
                                                                 <img src="1.jpg"width="480"height="324">  
                                                                 <img src="2.jpg"width="512"height="384">
                                                                 <img src="3.jpg"width="512"height="384">
